[package]
name = "clear_on_drop"
version = "0.2.3"
authors = ["Cesar Eduardo Barros <cesarb@cesarb.eti.br>"]
description = "Helpers for clearing sensitive data on the stack and heap"
documentation = "https://docs.rs/clear_on_drop"
repository = "https://github.com/cesarb/clear_on_drop"
readme = "README.md"
keywords = ["clear_on_drop", "clear_stack", "zeroize"]
categories = ["cryptography", "no-std"]
license = "MIT OR Apache-2.0"

build = "build.rs"

[badges]
travis-ci = { repository = "cesarb/clear_on_drop" }
appveyor = { repository = "cesarb/clear_on_drop" }

[features]
no_cc = []
nightly = ["no_cc"]

[build-dependencies]
cc = "1.0"

[dependencies]
